log
Tue 03 Oct 2023 09:39:26 PM UTC: 
 tests:  0|5
total_score: 0/70
3103d9b
Thu 05 Oct 2023 01:31:22 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:19: error: unused variable ‘j’ [-Werror=unused-variable]
   54 |   unsigned long i,j;
      |                   ^
sudoku.c:54:17: error: unused variable ‘i’ [-Werror=unused-variable]
   54 |   unsigned long i,j;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
b1e4cb1
Thu 05 Oct 2023 01:31:35 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:9: error: unused variable ‘j’ [-Werror=unused-variable]
   54 |   int i,j;
      |         ^
sudoku.c:54:7: error: unused variable ‘i’ [-Werror=unused-variable]
   54 |   int i,j;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
a8d395e
Thu 05 Oct 2023 01:37:06 AM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:10: error: ‘m’ undeclared (first use in this function)
   56 |       if(m-<sudo[i][j]==0){
      |          ^
sudoku.c:56:10: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:56:12: error: expected expression before ‘<’ token
   56 |       if(m-<sudo[i][j]==0){
      |            ^
sudoku.c:60:11: error: implicit declaration of function ‘insertFront’ [-Werror=implicit-function-declaration]
   60 |           insertFront(list,copiaList);
      |           ^~~~~~~~~~~
sudoku.c:60:28: error: ‘copiaList’ undeclared (first use in this function); did you mean ‘copialist’?
   60 |           insertFront(list,copiaList);
      |                            ^~~~~~~~~
      |                            copialist
sudoku.c:62:20: error: expected ‘;’ before ‘}’ token
   62 |         return list
      |                    ^
      |                    ;
   63 |       }
      |       ~             
cc1: all warnings being treated as errors
Compilation failed
b015bd0
Thu 05 Oct 2023 01:37:23 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:12: error: expected expression before ‘<’ token
   56 |       if(n-<sudo[i][j]==0){
      |            ^
sudoku.c:60:11: error: implicit declaration of function ‘insertFront’ [-Werror=implicit-function-declaration]
   60 |           insertFront(list,copiaList);
      |           ^~~~~~~~~~~
sudoku.c:60:28: error: ‘copiaList’ undeclared (first use in this function); did you mean ‘copialist’?
   60 |           insertFront(list,copiaList);
      |                            ^~~~~~~~~
      |                            copialist
sudoku.c:60:28: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:62:20: error: expected ‘;’ before ‘}’ token
   62 |         return list
      |                    ^
      |                    ;
   63 |       }
      |       ~             
cc1: all warnings being treated as errors
Compilation failed
3d3341e
Thu 05 Oct 2023 01:37:41 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:11: error: implicit declaration of function ‘insertFront’ [-Werror=implicit-function-declaration]
   60 |           insertFront(list,copialist);
      |           ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9e62944
Thu 05 Oct 2023 01:38:30 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:11: error: implicit declaration of function ‘insertFront’ [-Werror=implicit-function-declaration]
   60 |           insertFront(list,copialist);
      |           ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5daea39
Thu 05 Oct 2023 01:41:27 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9d03c74
Thu 05 Oct 2023 01:44:20 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0cc53d8
Thu 05 Oct 2023 01:45:01 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5ff9d6e
Thu 05 Oct 2023 01:55:33 AM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:14: error: expected ‘;’ before ‘:’ token
   48 |   for(i=0;i<9:i++){
      |              ^
      |              ;
Compilation failed
f780f42
